only validate email if survey object is defined

--- a/dk.itu.smdp.survey.dsl/xtend-gen/dk/itu/smdp/survey/generator/.gitignore
+++ b/dk.itu.smdp.survey.dsl/xtend-gen/dk/itu/smdp/survey/generator/.gitignore
@@ -3,3 +3,6 @@
 /.PhpTemplate.java._trace
 /.LatexTemplate.java._trace
 /.SurveyTemplate.java._trace
+/LatexTemplate.java
+/PhpTemplate.java
+/SurveyTemplate.java
